# ros2-tutorial

./: .gitignore  abcd.txt  bt.xml  ros2_huongdan.txt  test_pipeline_hiện_tại_coarse_chưa_rtree.txt
ackermann_lifecycle_pkg/: CMakeLists.txt  package.xml  trajectory.csv
ackermann_lifecycle_pkg/launch/: ackermann.launch.py
ackermann_lifecycle_pkg/src/: ackermann_kinematics_node.cpp  ackermann_noise_node.cpp  ackermann_system_manager.cpp  kinematics_compare  kinematics_compare_node.cpp  plot_trajectory.py
distance_warning/: BTVN_02_tf2_qos.md  BTVN_03_NAV2.md  BTVN_04_Ackermann_Lifecycle.md  Btvn_01.md  CMakeLists.txt  frames_2026-04-08_15.31.11.gv  my_nav2_params.yaml  package.xml
distance_warning/action/: CheckDistance.action
distance_warning/launch/: distance_warning.launch.py  distance_warning_full.launch.py
distance_warning/maps/: turtlebot3_world_inflation_rad_0.2.pgm  turtlebot3_world_inflation_rad_0.2.yaml  turtlebot3_world_res_0.025.pgm  turtlebot3_world_res_0.025.yaml  turtlebot3_world_res_0.05.pgm  turtlebot3_world_res_0.05.yaml  turtlebot3_world_res_0.1.pgm  turtlebot3_world_res_0.1.yaml
distance_warning/src/: distance_action_client.cpp  distance_action_server.cpp  distance_listener.cpp  distance_listener_qos.cpp  distance_publisher.cpp  distance_publisher_qos.cpp  distance_tf_broadcaster.cpp  distance_tf_listener.cpp  set_threshold_service.cpp
distance_warning/srv/: SetThreshold.srv
lifecycle_demo/: CMakeLists.txt  package.xml
lifecycle_demo/include/lifecycle_demo/: ackermann_kinematics.hpp
lifecycle_demo/src/: minimal_lifecycle_node.cpp
lifecycle_demo/test/: test_kinematics.cpp
my_pure_pursuit/: CMakeLists.txt  package.xml  plugins.xml
my_pure_pursuit/include/my_pure_pursuit/: pure_pursuit_controller.hpp
my_pure_pursuit/src/: pure_pursuit_controller.cpp
my_robot_controller/: package.xml  setup.py
my_robot_controller/my_robot_controller/: my_first_node.py
nav2_goal_sender/: CMakeLists.txt  package.xml
nav2_goal_sender/bag_record/trial_navfn_1/: metadata.yaml
nav2_goal_sender/bag_record/trial_navfn_2/: metadata.yaml  trial_navfn_2_0.db3
nav2_goal_sender/bag_record/trial_navfn_3/: metadata.yaml  trial_navfn_3_0.db3
nav2_goal_sender/bag_record/trial_navfn_4/: metadata.yaml  trial_navfn_4_0.db3
nav2_goal_sender/bag_record/trial_navfn_5/: metadata.yaml  trial_navfn_5_0.db3
nav2_goal_sender/src/: goal_sender.cpp  planner_comparison_node.cpp
patrol_robot/: CMakeLists.txt  package.xml
patrol_robot/src/: patrol_node.cpp
