<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distance_warning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ngxwang@todo.todo">ngxwang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- file CheckDistance.action (do được tạo thủ công) chưa được Cmake biên dịch ->cần được biên dịch thông qua câu lệnh <buildtool_depend> -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
<!-- bt2 -->
<depend>tf2</depend>
<depend>tf2_ros</depend>
<depend>tf2_geometry_msgs</depend>
<depend>geometry_msgs</depend>
<!--  -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rclcpp_action</depend>
  <!-- chưa có action_msgs (do Action là tự tạo) -->
  <depend>action_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
